Fix a bug in compressed texture code path.

If we specify a texture using texStorage, the texture is uninitialized,
so if we call compressedTexSubImage, we need to consider the situation.

BUG=663960
TEST=webgl2_conformance (in https://github.com/KhronosGroup/WebGL/pull/2142)
R=piman@chromium.org,kbr@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2497013002
Cr-Commit-Position: refs/heads/master@{#431642}

Former-commit-id: 5219f45e8e6755153240985d4adeae6d27d69db7